--- a/els/refrig-el.htm
+++ b/els/refrig-el.htm
@@ -1,1 +1,448 @@
+<html>
+
+<body>
+
+<!-- Search Google -->
+
+<center>
+
+<form method="get" action="http://www.google.com/custom" target="_top">
+
+<table bgcolor="#ffffff">
+
+<tr><td nowrap="nowrap" valign="top" align="left" height="32">
+
+<a href="http://www.google.com/">
+
+<img src="http://www.google.com/logos/Logo_25wht.gif" border="0" alt="Google" align="middle"></img></a>
+
+<label for="sbi" style="display: none">Enter your search terms</label>
+
+<input type="text" name="q" size="31" maxlength="255" value="" id="sbi"></input>
+
+<label for="sbb" style="display: none">Submit search form</label>
+
+<input type="submit" name="sa" value="Search" id="sbb"></input>
+
+<input type="hidden" name="client" value="pub-0982093050363034"></input>
+
+<input type="hidden" name="forid" value="1"></input>
+
+<input type="hidden" name="ie" value="ISO-8859-1"></input>
+
+<input type="hidden" name="oe" value="ISO-8859-1"></input>
+
+<input type="hidden" name="cof" value="GALT:#008000;GL:1;DIV:#336699;VLC:663399;AH:center;BGC:FFFFFF;LBGC:336699;ALC:0000FF;LC:0000FF;T:000000;GFNT:0000FF;GIMP:0000FF;FORID:1"></input>
+
+<input type="hidden" name="hl" value="en"></input>
+
+</td></tr></table>
+
+</form>
+
+</center>
+
+<!-- Search Google -->
+
+
+
+<hr>
+
+<center>
+
+
+
+<script type="text/javascript"><!--
+
+google_ad_client = "pub-0982093050363034";
+
+google_alternate_color = "0000FF";
+
+google_ad_width = 728;
+
+google_ad_height = 90;
+
+google_ad_format = "728x90_as";
+
+google_ad_type = "text_image";
+
+google_ad_channel = "";
+
+//-->
+
+</script>
+
+<script type="text/javascript"
+
+  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+
+</script>
+
+
+
+</center>
+
+<hr>
+
+<title>Homemade Refrigeration System With Propane Refrigerant.</title>
+
+
+
+<h1 align=center>Homemade Refrigeration System With Propane Refrigerant.</h1>
+
+<hr>
+
+<blockquote><b><i>There is no intention here to imply that
+
+any of the procedures discussed here are safe, legal or even 
+
+sane.  I take no responsibility for what anyone may do with
+
+this information.  The &%$^#@ environmentalists have made  the
+
+process of refrigeration into a big Three Ring Circus.  The regulations that they have brought about
+
+are so stringent that one should never underestimate the ease
+
+of being a criminal when involved with any refrigeration
+
+process.  Yes, There are high pressures involved, and I know 
+
+that propane (R 290) is flammable and explosive and that there 
+
+are many reasons that a system of this nature may not always be suitable 
+
+for domestic uses.  So Please spare me from letters and 
+
+comments about my stupidity.  This is not a plan for a 
+
+practical, safe, reliable refrigerator.  It's sole purpose was 
+
+to observe a working refrigeration process using materials 
+
+obtained from the nearest hardware store.  The materials used 
+
+are crude by refrigeration standards and the possibility of 
+
+leaks are high, making this a project to strongly consider 
+
+being done out of doors.
+
+</i></b></blockquote>
+
+<p>
+
+<hr>
+
+
+
+        I have always been fascinated by any process of 
+
+refrigeration.  I also enjoy doing experiments whereby I can
+
+make some exotic phenomenon work without the use of exotic
+
+and proprietary materials that have to be supplied or controlled
+
+by an exotic place or people.  Making the process
+
+of refrigeration happen using materials from the local hardware
+
+store would be a fascinating project indeed.
+
+<p>
+
+
+
+	There are some fairly common substances that make good 
+
+refrigerants.  Propane is one of them and is classified as
+
+R 290.  The ban on R 12 greatly intensifies the fascination of 
+
+being able to use ordinary propane, from the hardware store, as
+
+a refrigerant in a home built experiment.  I decided to build
+
+a crude system of my own and see if I could get something frosty in my own 
+
+garage.  Sources say that propane is compatible with the mineral oil 
+
+that is used in R-12 systems.
+
+Any information on this subjuct is certainly welcome. 
+
+I felt that the project would be a total success if It could cause
+
+even a tiny spot, anywhere on the system, to get frosty.  My best
+
+expectations were greatly exceeded when the entire cold side of
+
+the system, including all the fittings and valves, frosted up in 
+
+just two or three minutes.  It makes the kind of cold that grabs 
+
+your fingers when touched.       
+
+<p>
+
+
+
+	Before starting with the system described below, I did a
+
+simple experiment using just a can of propane, and a thermometer.
+
+The cannister of propane was fitted with a valve from a used brazing
+
+kit and had a rubber hose.  The thermometer was of the glass mercury
+
+type that red down to -30 deg F.  I pointed the rubber hose at the
+
+bulb of the thermometer and opened the valve for a few seconds, 
+
+spraying it with liquid propane.  The thermometer fell, in a few 
+
+seconds, below the -30 deg f mark and went clear down into the
+
+bulb.
+
+<p>
+
+
+
+        The next step was to make the refrigeration system after
+
+observing the dramatic refrigerant quality that propane has.
+
+There was one exception made to using common hardware
+
+store materials and that was in making use of an existing
+
+refrigerator pump that I had laying around for more than a decade.
+
+I went to the hardware store and purchased 15 feet of 1/4" copper
+
+tubing, 4 small brass valves and various fittings etc.  I also
+
+got a 14 oz can of propane, the kind used on a blowtorch for 
+
+soldering copper pipe.
+
+<p>
+
+	 The picture below shows how it was built.  The 15 foot 
+
+length of copper tubing was chosen arbitrarily and cut in 
+
+the middle; a valve (V3) was inserted to be used as the expansion
+
+valve.  This is the valve that takes the place of the normally
+
+used capillary tube.  The valve has to be adjusted all the time
+
+as the temperature changes and is quite critical.  This is one
+
+of many reasons why this system is not about to replace the
+
+refrigerator in my kitchen.  The adjustment is easy though because
+
+of the two meters installed.  The reason for having the other three
+
+valves is to make the system capable of evacuating itself prior to
+
+the addition of the propane.  Since I didn't have a special
+
+cooling radiator, the coiled tubing on the hot side was immersed
+
+in a pan of tap temperature water to keep it cool.  The picture
+
+is mostly self explanatory and a list of operation procedures is
+
+given below.
+
+
+
+<p>
+
+
+
+<hr>
+
+
+
+<center><img src="refrig3.gif"></center>
+
+<hr>
+
+
+
+<h3 align=center>Actual photo of operating system.</h3>
+
+<p>
+
+The tubing on the right is the same as that on the left, but
+
+looks white because it is covered with frost.
+
+<p>
+
+<center><img src="prfg1.jpg"></center>
+
+
+
+<hr>
+
+<h3 align=center>Opreating Procedure.</h3>
+
+<p>
+
+
+
+1.  Start by evacuating the system.  V1 and V3 open, V2 and V4 closed.  
+
+Run the pump for a few minutes.  At first air will be exiting from
+
+V1.  After a while it will diminish to nothing.
+
+The meter that I used for M2 happened to be the type that also 
+
+reads vacuum.  The system evacuated to below 20".
+
+<p>
+
+
+
+2.  Close V1 and open V2.  The system is now running with most
+
+of the air removed.  Connect the propane cannister through a
+
+high pressure rubber hose to the inlet barb on V4.  
+
+Having a fitting on the cannister with a valve, as described above,
+
+is helpful. Open V4 and the valve on the propane cannister until 
+
+both meters read about 70 or 80 psig.  V4 and the valve on the 
+
+propane cannister can now be closed and the rubber hose removed from
+
+the barb on V4.  The system is now charged.
+
+<p>
+
+
+
+3.  Close V3 most of the way until you get a reading on M2 of
+
+between 15 and 20 psig.  This seems to be the optimal settings
+
+on my system.  M1 should rise to 200 or more psig.  Within seconds,
+
+the copper tube on the low pressure side of V3 should start to 
+
+frost up.  As the system runs, you will need to keep on top of
+
+the pressure setting on the meters by adjusting V3.  The system
+
+has been a thrill to operate in spite of this.  Maybe later, I will
+
+find an improved form of V3; it is a very crude expansion control.
+
+After a while, the water that is cooling the hot side will get
+
+warm and the efficiency of the system will diminish, making a
+
+change of water desirable.
+
+<p>
+
+
+
+I weighed the propane cannister before and after filling the 
+
+system.  Using a kitchen food scale, I could see that approx
+
+1 oz. of propane had been used.
+
+<p>
+
+
+
+The psig pressure readings given for the meter readings above,
+
+mean pressure in pounds per square inch as compared to atmospheric
+
+pressure.  This is called gauge (g) scale.  Pressure readings 
+
+sometimes are given as psia.  This means pressure in pounds
+
+per square inch as compared to an absolute (a) vacuum.  Thus,
+
+the difference between a reading listed as psig and one listed
+
+as psia would be roughly 14 to 15 psi.  The psia reading would
+
+be higher because it includes atmospheric pressure. 
+
+<p>
+
+<hr>
+
+<h3 align=center>What is happening?.</h3>
+
+<p>
+
+
+
+Propane is compressed by the compressor into the hot side or high
+
+pressure side tubing.  The propane, like any gas tends to get hot.
+
+If the tubing is kept cool, the high pressure propane will condense
+
+under the pressure into a liquid.  Condensing tends to make it even
+
+hotter, but the idea is to cool it down; in this case we are using
+
+water.  This tubing full of room temperature liquid is now the 
+
+same thing as the cannister full of propane.  When the expansion 
+
+valve is opened just a little, the high pressure liquid propane 
+
+squirts into the cold or low pressure side tubing and vaporizes; 
+
+just like it did when squirting it on to the thermometer.  Any 
+
+time a liquid vaporizes, it tends to absorb heat and make things, 
+
+that it comes in contact with, very cold.  The vapor finally finds 
+
+its way to the input side of the pump where it is compressed again.
+
+<p>
+
+
+
+<hr>
+
+<h3><a href="http://www.sparkbangbuzz.com/index.html">Sparkbangbuzz Home page.</a></h3>
+
+
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+
+</script>
+
+<script type="text/javascript">
+
+_uacct = "UA-490386-1";
+
+urchinTracker();
+
+</script>
+
+</body>
+
+</html>
 
