--- a/mag-audio-amp/mag-audio-amp.htm
+++ b/mag-audio-amp/mag-audio-amp.htm
@@ -1,1 +1,159 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<HTML>
+<HEAD>
 
+<body background="bkg2.jpg">
+
+<TITLE>Homemade Magnetic Audio Amplifier.</TITLE>
+
+<META content="text/html; charset=windows-1252" http-equiv=Content-Type>
+<META content="MSHTML 5.00.2614.3500" name=GENERATOR></HEAD>
+
+
+<BODY>
+
+<!-- Search Google -->
+
+<center>
+
+<form method="get" action="http://www.google.com/custom" target="_top">
+
+<table bgcolor="#ffffff">
+
+<tr><td nowrap="nowrap" valign="top" align="left" height="32">
+
+<a href="http://www.google.com/">
+
+<img src="http://www.google.com/logos/Logo_25wht.gif" border="0" alt="Google" align="middle"></img></a>
+
+<label for="sbi" style="display: none">Enter your search terms</label>
+
+<input type="text" name="q" size="31" maxlength="255" value="" id="sbi"></input>
+
+<label for="sbb" style="display: none">Submit search form</label>
+
+<input type="submit" name="sa" value="Search" id="sbb"></input>
+
+<input type="hidden" name="client" value="pub-0982093050363034"></input>
+
+<input type="hidden" name="forid" value="1"></input>
+
+<input type="hidden" name="ie" value="ISO-8859-1"></input>
+
+<input type="hidden" name="oe" value="ISO-8859-1"></input>
+
+<input type="hidden" name="cof" value="GALT:#008000;GL:1;DIV:#336699;VLC:663399;AH:center;BGC:FFFFFF;LBGC:336699;ALC:0000FF;LC:0000FF;T:000000;GFNT:0000FF;GIMP:0000FF;FORID:1"></input>
+
+<input type="hidden" name="hl" value="en"></input>
+
+</td></tr></table>
+
+</form>
+
+</center>
+
+<!-- Search Google -->
+
+
+
+<hr>
+
+<center>
+
+
+
+<script type="text/javascript"><!--
+
+google_ad_client = "pub-0982093050363034";
+
+google_alternate_color = "0000FF";
+
+google_ad_width = 728;
+
+google_ad_height = 90;
+
+google_ad_format = "728x90_as";
+
+google_ad_type = "text_image";
+
+google_ad_channel = "";
+
+//-->
+
+</script>
+
+<script type="text/javascript"
+
+  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+
+</script>
+
+
+
+</center>
+
+<hr>
+
+<basefont size="3"/><b>
+<H1 align=center><B>Homemade Magnetic Audio Amplifier.</B></h1>
+<H3 align="right"><B>By Nyle Steiner K7NS.</B></h3>
+<H3 align="right"><B>23 January 2010.</B></h3> 
+
+<P>
+
+<hr>
+
+<P> <center><IMG src="ns2091-33.jpg"/></center>
+<p>A magnetic audio amplifier.  The 9 volt battery is to supply dc bias to the circuit.
+
+<hr>
+
+<P> <center><IMG src="ns2093-cr-33-l.jpg"/></center>
+<p>Magnetic audio amplifier schematic.  
+
+<p>High impedance signals can be fed into the input of this circuit by using a matching step down transformer such as the Bogen T725 or similar.  It is sometimes helpful to bypass the output of the transformer with a .1 uf capacitor and run the signal to the input through an inductor of several millihenries to keep any residual 35 khz signal from feeding back through the input to the crystal set.  
+
+<p>A typical crystal set connection with the T725 would be to groud the black wire, connect the brown wire to the input of the magnetic amplifier and the purple wire to the crystal set output.   
+
+<hr>
+
+<p>This is my second report on magnetic amplifiers.  The first was a description of how to control the brightness of an incandescent light powered by 12 vac.  See:  <a href="../mag-amp/mag-amp.htm">Homemade Magnetic Amplifiers using common 12 Volt Transformers.</a>  This report shows how I applied the same principle, using toroids and a 35 khz ac power source, to make a magnetic audio amplifier.
+
+<p>The purpose of this project was to see if I could make a working audio magnetic amplifier using common materials.  This amplifier works very well under the circumstances that the toroids were randomly chosen surplus aquisitions from my parts box.  Using the speaker as a comparison between the input signal and the output signal, the signal is very much louder at the amplifier output.
+
+<p>Using this amplifier to control the brightness of a car tail light instead of an audio amplifier, I found the gain to be quite high.  With not very careful measurements, the power gain appeared to be well over 2000.  I will update this if I can make more accurate power gain observations.  In any case there is definitely some noteworthy gain. 
+
+<p>To evaluate the amount of gain using the tail light, I compared the change of input power with the change of output power dissipated by the output load.  In other words, I multiplied the change of output voltage across the load times the change of current through the load.  I then divided this by the change of input voltage times the change of input current.
+
+<p>The source of ac power for this amplifier was a quickly made 35 khz oscillator that puts out a 10 - 12 vac sine wave capable of lighting a car tail light to full brilliance.  This oscillator is not yet designed well enough to publish here.
+
+<p>It is interesting to note that with the magnetic amplifier using diodes and 60 hz to control a car headlight, the light is quite bright with no input dc bias.  Applying a dc bias to the input, depending on its polarity, will turn the light either dimmer or brighter.  See:  <a href="../mag-amp/mag-amp.htm">Homemade Magnetic Amplifiers using common 12 Volt Transformers.</a>  In this circuit, using 35 khz and toroids to control a light, the light is completely off with no input dc bias.  A positive dc bias will turn the light on and brighter.  This is why the input coil polarity dots are on the bottom instead of on top as shown in the car headlight control circuit.  This suggests to me that these toroids may be capable of controlling a lot more power than is being controlled in this experiment.
+
+<p>The mag amp is true amplification without the use of tubes, transistors or IC's but it does require the use of an ac power source.  While most ac oscillators require the use of transistors, this amp could concievably run using an ac power signal from a carbon arc or maybe even a zinc oscillator or similar.
+
+
+<p>There are some good articles online about magnetic amplifier theory.  Two of the best are: The Transformer Book by Lee Reuben and Magnetic Amplifiers by Mali.  They can be found on google.
+Most of these articles however, describe mag amps in theoretical terms. They can easily lead one to think that special cores and transformers would be necessary in order to to actually build a magnetic amplifier. Nothing could be farther from the truth.
+
+
+
+
+
+<hr>
+<h3><a href="http://www.sparkbangbuzz.com/">Sparkbangbuzz Home Page.</a></h3>
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+
+</script>
+
+<script type="text/javascript">
+
+_uacct = "UA-490386-1";
+
+urchinTracker();
+
+</script>
+
+
+</BODY>
+</HTML>
