--- a/thermocouple/thermocouple.htm
+++ b/thermocouple/thermocouple.htm
@@ -1,1 +1,169 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<HTML>
+<HEAD>
 
+<body background="bkg2.jpg">
+
+<TITLE>Thermocouples Made From Ordinary Copper and Steel Wire</TITLE>
+
+<META content="text/html; charset=windows-1252" http-equiv=Content-Type>
+<META content="MSHTML 5.00.2614.3500" name=GENERATOR></HEAD>
+
+
+<BODY>
+
+<!-- Search Google -->
+
+<center>
+
+<form method="get" action="http://www.google.com/custom" target="_top">
+
+<table bgcolor="#ffffff">
+
+<tr><td nowrap="nowrap" valign="top" align="left" height="32">
+
+<a href="http://www.google.com/">
+
+<img src="http://www.google.com/logos/Logo_25wht.gif" border="0" alt="Google" align="middle"></img></a>
+
+<label for="sbi" style="display: none">Enter your search terms</label>
+
+<input type="text" name="q" size="31" maxlength="255" value="" id="sbi"></input>
+
+<label for="sbb" style="display: none">Submit search form</label>
+
+<input type="submit" name="sa" value="Search" id="sbb"></input>
+
+<input type="hidden" name="client" value="pub-0982093050363034"></input>
+
+<input type="hidden" name="forid" value="1"></input>
+
+<input type="hidden" name="ie" value="ISO-8859-1"></input>
+
+<input type="hidden" name="oe" value="ISO-8859-1"></input>
+
+<input type="hidden" name="cof" value="GALT:#008000;GL:1;DIV:#336699;VLC:663399;AH:center;BGC:FFFFFF;LBGC:336699;ALC:0000FF;LC:0000FF;T:000000;GFNT:0000FF;GIMP:0000FF;FORID:1"></input>
+
+<input type="hidden" name="hl" value="en"></input>
+
+</td></tr></table>
+
+</form>
+
+</center>
+
+<!-- Search Google -->
+
+
+
+<hr>
+
+<center>
+
+
+
+<script type="text/javascript"><!--
+
+google_ad_client = "pub-0982093050363034";
+
+google_alternate_color = "0000FF";
+
+google_ad_width = 728;
+
+google_ad_height = 90;
+
+google_ad_format = "728x90_as";
+
+google_ad_type = "text_image";
+
+google_ad_channel = "";
+
+//-->
+
+</script>
+
+<script type="text/javascript"
+
+  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+
+</script>
+
+
+
+</center>
+
+
+
+
+<basefont size="3"/><b>
+<H1 align=center><B>Thermocouples Made From Ordinary Copper and Steel Wire</B></h1>
+<H3 align="right"><B>By Nyle Steiner K7NS.</B></h3>
+<H3 align="right"><B>June 2011.</B></h3>  
+
+<p>
+<hr>
+
+<H2 align=center><B>Two copper and steel thermocouples.</B>
+
+<P><IMG src="ns4659.jpg"/></h2>
+<p>A piece of ordinary copper wire and a piece of ordinary steel wire were soldered together at the ends to make two thermocouples back to back in a loop .  Thermocouple wire was not used in these experiments.  I wanted to see what could be done with ordinary copper and steel wire.  
+<p>According to the second law of thermocouples, the solder used in the thermocouple junctions has little or no effect as long as the thermocouple temperatures are kept below the melting point of the solder.
+<p>Copper and steel is not a commonly used combination for making thermocouples and for good reason.  At a given temperature, the copper and steel thermocouple will be producing a few tenths of a millivolt while a more conventional thermocouple might be producing 20 millivolts.  Accordingly, I have experienced difficulty in finding voltage versus temperature data for copper and steel thermocouples.
+<p>In spite of the very low voltages produced with a copper and steel thermocouple, it is possible to generate impressive amounts of current if the circuit resistance is kept very low.  A standard D'Arsonval milliameter has far too much resistance to use at voltages around one millivolt.
+<p>A DC clamp on milliameter adds no resistance to the circuit and can accurately indicate how much current is being generated with a simple copper and steel thermocouple.
+<p> 
+<hr>
+<P><center><IMG src="ns4664.jpg"/></center>
+
+<p>Five milliamps will flow through this loop just by applying the heat from my fingers to one junction.  With a flame held under one junction momentarily, we can easily observe 80 ma.
+<p>20 ma can be produced by touching a piece of ice to the opposite junction.
+
+<hr>
+<H2 align=center><B>Thermocouple loop made into a coil can deflect a compass needle.</B.</h2> 
+
+
+<P><center><IMG src="ns4660.jpg"/></center>
+<p>DC current probe meters are certainly not found everywhere but a compass can be used to indicate current flow by making the thermocouple loop into a coil.  This coil uses 5 feet of copper wire but the use of 12 gauge keeps the resistance low enough for observable current to flow.
+<P><center><IMG src="ns4739-0006.jpg"/></center>
+<p>The compass needle is most easily deflected when it is perpendicular to the coil axis as shown in the above picture.  A piece of tissue paper was placed over the mirror in the compass case to eliminate lighting glare while taking the photographs.
+<P><center><IMG src="ns4739-1028.jpg"/></center>
+<p>A flame held under one junction will cause an easily observable deflection of the compass needle.
+<P><center><IMG src="ns4741-0826.jpg"/></center>
+<p>When a flame is held under the opposite junction, the compass needle will deflect in the opposite direction.
+
+<hr>
+
+<p><center><IMG src="ns4633.jpg"/></center>
+<p>The magnetic field of the earth pulls on the compass needle like a spring and makes it somewhat difficult to deflect.  I can get much more deflection of the compass needle after carefully placing one or two magnets in the vicinity of the compass to cancel some of the earth's magnetic pull.
+<hr>
+
+<p><center><IMG src="ns4632-1.jpg"/></center>
+<p><center><IMG src="ns4632-2.jpg"/></center>
+<p>With the magnets in place to counteract the earth's magnetic field, I can get a very noticeable needle deflection just by applying heat from my fingers to one thermocouple junction.
+
+<hr>
+<p><center><IMG src="ns4593.jpg"/></center>
+<p>If a good compass is not available, the same results can be obtained by hanging a magnet inside the coil from a string.  In the picture above, the string is suspended from a photography tripod.  On the left is a magnet carefully placed to counteract the pull of the earth's magnetic field.
+
+<hr>
+<p>I noticed a peculiarity in the copper and steel thermocouple while applying heat to a single junction connected to a voltmeter.
+As I raised the temperature of the junction, the voltage reading would also increase as expected.  When the temperature reached a certain point well above that of boiling water, I would abserve approx 1.5 millivolts positive.  But, as the temperature increased above this point, the voltage output from the junction would start to decrease until a point was reached that gave a reading of zero voltage.  As the temperature increased further above this point the voltage output from the junction would start to increase again but with opposite polarity until a reading of approx 1.5 millivolts minus was read.  I did not apply any more heat at this point because the junction was red hot and appeared to be near the melting point of the copper.  
+
+<hr>
+
+<h3><a href="http://www.sparkbangbuzz.com/">Sparkbangbuzz Home Page.</a></h3>
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+
+</script>
+
+<script type="text/javascript">
+
+_uacct = "UA-490386-1";
+
+urchinTracker();
+
+</script>
+
+</BODY>
+</HTML>
