--- a/zinc-oxide-diode/zinc-oxide-diode.htm
+++ b/zinc-oxide-diode/zinc-oxide-diode.htm
@@ -1,1 +1,164 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<HTML>
+<HEAD>
 
+<body background="bkg2.jpg">
+
+<TITLE>HomemadeZinc Oxide Rectifier Diode.</TITLE>
+
+<META content="text/html; charset=windows-1252" http-equiv=Content-Type>
+<META content="MSHTML 5.00.2614.3500" name=GENERATOR></HEAD>
+
+
+<BODY>
+
+<!-- Search Google -->
+ 
+<center>
+ 
+<form method="get" action="http://www.google.com/custom" target="_top">
+ 
+<table bgcolor="#ffffff">
+ 
+<tr><td nowrap="nowrap" valign="top" align="left" height="32">
+ 
+<a href="http://www.google.com/">
+ 
+<img src="http://www.google.com/logos/Logo_25wht.gif" border="0" alt="Google" align="middle"></img></a>
+ 
+<label for="sbi" style="display: none">Enter your search terms</label>
+ 
+<input type="text" name="q" size="31" maxlength="255" value="" id="sbi"></input>
+ 
+<label for="sbb" style="display: none">Submit search form</label>
+ 
+<input type="submit" name="sa" value="Search" id="sbb"></input>
+ 
+<input type="hidden" name="client" value="pub-0982093050363034"></input>
+ 
+<input type="hidden" name="forid" value="1"></input>
+ 
+<input type="hidden" name="ie" value="ISO-8859-1"></input>
+ 
+<input type="hidden" name="oe" value="ISO-8859-1"></input>
+ 
+<input type="hidden" name="cof" value="GALT:#008000;GL:1;DIV:#336699;VLC:663399;AH:center;BGC:FFFFFF;LBGC:336699;ALC:0000FF;LC:0000FF;T:000000;GFNT:0000FF;GIMP:0000FF;FORID:1"></input>
+ 
+<input type="hidden" name="hl" value="en"></input>
+ 
+</td></tr></table>
+ 
+</form>
+ 
+</center>
+ 
+<!-- Search Google -->
+ 
+ 
+ 
+<hr>
+ 
+<center>
+ 
+ 
+ 
+<script type="text/javascript"><!--
+ 
+google_ad_client = "pub-0982093050363034";
+ 
+google_alternate_color = "0000FF";
+ 
+google_ad_width = 728;
+ 
+google_ad_height = 90;
+ 
+google_ad_format = "728x90_as";
+ 
+google_ad_type = "text_image";
+ 
+google_ad_channel = "";
+ 
+//-->
+ 
+</script>
+ 
+<script type="text/javascript"
+ 
+  src="http://pagead2.googlesyndication.com/pagead/show_ads.js"> 
+ 
+</script>
+ 
+ 
+ 
+</center>
+ 
+<hr>
+
+
+<basefont size="3"/><b>
+<H1 align=center><B>Homemade Zinc Oxide Rectifier Diode.</B></h1>
+
+<H3 align="right"><B>By Nyle Steiner K7NS December 2012.</B></h3>
+
+
+<P>
+
+<hr>
+<H2 align=center><B>Zinc Oxide and Lead compared to Germanium Diode.</B></h2>
+<P> <left><IMG src="zo-lead-7729a.jpg"/></left>
+<!--<right><IMG src="zinc-oxide-7154.jpg"/></right>-->
+<right><IMG src="germanium-diode-7738a.jpg"/></right>
+<p>AC is applied to the device.  The vertical center line represents zero voltage and the horizontal center line represents zero current.
+<P> 
+<left><IMG src="zo-lead-cw-7732a.jpg"/></left>
+
+<hr>
+<p>There are some who might wonder why I would bother to make a diode when it is easy enough to purchase a good germanium diode.  Simple answer:  The homemade diode is more fun.
+<p>This diode is a much different animal from the zinc negative resistance diode that I have described in other articles and it can work well as a radio detector with performance close to that of a germanium diode (1N34) when using a metallic lead contact. The zinc negative resistance diode on the other hand, is great for making oscillators and transmitters but it does not work especially well as a radio detector.  
+<p>This zinc oxide diode produces the best diode rectifier curve that I have ever obtained thus far from a home cooked device but it can only withstand about 3 volts in the reverse direction.
+<p>A more robust and easy to adjust diode is formed when in contact with a piece of pencil graphite but the forward voltage drop is a bit higher - more like that of a silicon diode (1N4148).  The reverse voltage is still limited however to about 3 volts.  
+
+<p>In my past experimentation of making zinc negative resistance devices, I have always heated galvanized sheet metal to the point where it flares up with bright white flames.  This resulted in dark spots that were negative resistance areas surrounded with a lot of white zinc oxide that displayed no electrical conductivity whatsoever.  
+<p>In this case however, a large blob of zinc is heated red hot but not hot enough to burst into flames.  After cooling, this seems to form a thin layer of N type zinc oxide.
+<p>A zinc - copper coated penny can work well for a source of zinc.  File the edge of the penny about 1/4 the way around and then drill a hole near the opposite edge.  Hold the penny by placing a piece of heavy steel wire through the hole and heat with a propane torch until the penny deforms.  The zinc can now be dropped as a blob through the filed opening on the bottom edge of the penny onto a piece of stainless steel shim or thin copper sheet.  Heat the shim and zinc over a propane flame until the zinc melts and the shim and zinc are just barely red hot.  Keep the flame under the shim so that the molten zinc will have open exposure to air and oxygen.  Spread the molten zinc blob around into a flat blob using a nail or piece of wire.  Now let the blob sit and continue heating this way for about 30 seconds but be careful not to let the zinc burst into a white flame.  The molten zinc blob will form a thin darker looking wrinkly film.  After cooling, the zinc will be ready to use and will have a coating of zinc oxide that is suitable for use as a diode. 
+
+<hr>
+<center><IMG src="galvcrv.jpg"/></center>
+<p>
+The zinc negative resistance diode is a different device and is made using a different process where the zinc is purposely heated hot enough to flame up and form what I think is zinc ferrite by burning in the presence of both iron and oxygen.  It is great for making oscillators and radio transmitters.  
+<p>See references :
+<p><a href="http://www.sparkbangbuzz.com/els/zincosc-el.htm">
+Original zinc negative resistance oscillator.</a>
+<p><a href="../zinc-osc-2/zinc-osc3.htm">
+Zinc negative resistance 80 meter CW transmitter.</a>
+<p><a href="../zinc-40-meter-xmtr/zinc-40-meter-xmtr.htm">Zinc negative resistance 40 meter CW transmitter.</a>
+
+<hr>
+<H2 align=center><B>Zinc Oxide and Pencil Graphite Compared To Silicon Diode.</B></h2>
+<p>
+<left><IMG src="zinc-oxide-7154.jpg"/></left>
+<right><IMG src="1n4148-7742a.jpg"/></right>
+<p>The zinc oxide - pencil graphite diode has a larger forward voltage drop than the zinc oxide - lead diode and displays a curve that is more similar to a silicon diode diode curve on the right.  It can work well as a crystal set detector into a high impedance set of headphones if the signal level is high.  With smaller signal levels, the diode works best by adding some forward bias of a few tenths of a volt in series.
+<p>
+<left><IMG src="zinc-oxide-4-7158.jpg"/></left>
+
+
+<hr>
+
+
+<h3><a href="http://www.sparkbangbuzz.com/">Sparkbangbuzz Home Page.</a></h3>
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"> 
+ 
+</script>
+ 
+<script type="text/javascript"> 
+ 
+_uacct = "UA-490386-1";
+ 
+urchinTracker();
+ 
+</script>
+
+</BODY>
+</HTML>
